@startuml steg 5

entity Customer {}
entity Order {}
entity Product {}
entity Category {}
entity Stock {}
entity Order_Item {}
entity Delivery {}
entity Invoice {}
entity Inventory_Event {}

Customer ||--o{ Order : "1:N"
Order ||--o{ Order_Item : "1:N"
Order_Item }o--|| Product : "N:1"
Product }o--o{ Category : "N:M"
Product ||--o{ Stock : "1:N"
Order ||--|| Invoice : "1:1"
Order ||--o{ Delivery : "1:N"
Inventory_Event }o--|| Order : "1:N"
Inventory_Event }o--|| Invoice : "1:N"

@enduml